	PR tree-optimization/81799 	* tree-loop-distribution.c (version_loop_by_alias_check): Force 	cond_expr to simple gimple operand.

gcc/testsuite
	* gcc.dg/tree-ssa/pr81799.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@251088 138bc75d-0d04-0410-961f-82ee72b054a4